Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/enum/forwardRef/TestEnum2.out
TestEnum2.java:13:36: compiler.err.illegal.enum.static.ref
TestEnum2.java:14:36: compiler.err.illegal.enum.static.ref
2 errors
